[package]
name = "jacquard"
description.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[features]
default = ["api_full", "dns", "loopback"]
derive = ["dep:jacquard-derive"]
api = ["jacquard-api/com_atproto", "jacquard-api/com_bad_example" ]
api_bluesky = ["api", "jacquard-api/bluesky" ]
api_full = ["api", "jacquard-api/bluesky", "jacquard-api/other", "jacquard-api/lexicon_community"]
api_all = ["api_full", "jacquard-api/ufos"]
dns = ["jacquard-identity/dns"]
fancy = ["miette/fancy"]
# Propagate loopback to oauth (server + browser helper)
loopback = ["jacquard-oauth/loopback", "jacquard-oauth/browser-open"]

[lib]
name = "jacquard"
path = "src/lib.rs"

[[example]]
name = "oauth_timeline"
path = "../../examples/oauth_timeline.rs"
required-features = ["fancy", "loopback", "api_bluesky"]

[[example]]
name = "create_post"
path = "../../examples/create_post.rs"
required-features = ["fancy", "loopback", "api_bluesky"]

[[example]]
name = "post_with_image"
path = "../../examples/post_with_image.rs"
required-features = ["fancy", "loopback", "api_bluesky"]

[[example]]
name = "update_profile"
path = "../../examples/update_profile.rs"
required-features = ["fancy", "loopback", "api_bluesky"]

[[example]]
name = "public_atproto_feed"
path = "../../examples/public_atproto_feed.rs"

[[example]]
name = "create_whitewind_post"
path = "../../examples/create_whitewind_post.rs"
required-features = ["fancy", "loopback", "api_full"]

[[example]]
name = "read_whitewind_posts"
path = "../../examples/read_whitewind_posts.rs"
required-features = ["fancy", "api_full"]

[[example]]
name = "read_tangled_repo"
path = "../../examples/read_tangled_repo.rs"
required-features = ["api_full"]

[[example]]
name = "resolve_did"
path = "../../examples/resolve_did.rs"

[[example]]
name = "update_preferences"
path = "../../examples/update_preferences.rs"
required-features = ["fancy", "loopback", "api_full"]

[dependencies]
jacquard-api = { version = "0.4", path = "../jacquard-api" }
jacquard-common = { version = "0.4", path = "../jacquard-common", features = ["reqwest-client"] }
jacquard-oauth = { version = "0.4", path = "../jacquard-oauth" }
jacquard-derive = { version = "0.4", path = "../jacquard-derive", optional = true }
jacquard-identity = { version = "0.4", path = "../jacquard-identity" }

bon.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
http.workspace = true
miette = { workspace = true }
reqwest = { workspace = true, features = ["charset", "http2", "json", "system-proxy", "gzip", "rustls-tls"] }
serde.workspace = true
serde_html_form.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
url.workspace = true
smol_str.workspace = true
percent-encoding.workspace = true
urlencoding.workspace = true
jose-jwk = { workspace = true, features = ["p256"] }
p256 = { workspace = true, features = ["ecdsa"] }
rand_core.workspace = true

[package.metadata.docs.rs]
features = [ "api_all", "derive", "dns", "fancy", "loopback" ]
