[package]
name = "jacquard"
description.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true
license.workspace = true

[features]
default = ["api_full", "dns", "loopback", "derive"]
derive = ["dep:jacquard-derive"]
# Minimal API bindings
api = ["jacquard-api/com_atproto", "jacquard-api/com_bad_example" ]
# Bluesky API bindings
api_bluesky = ["api", "jacquard-api/bluesky" ]
# Bluesky API bindings, plus a curated selection of community lexicons
api_full = ["api", "jacquard-api/bluesky", "jacquard-api/other", "jacquard-api/lexicon_community"]
# All captured generated lexicon API bindings
api_all = ["api_full", "jacquard-api/ufos"]
dns = ["jacquard-identity/dns"]
# Propagate loopback to oauth (server + browser helper)
loopback = ["jacquard-oauth/loopback", "jacquard-oauth/browser-open"]
# Enable tracing instrumentation
tracing = ["dep:tracing", "jacquard-common/tracing", "jacquard-oauth/tracing", "jacquard-identity/tracing"]


[[example]]
name = "oauth_timeline"
path = "../../examples/oauth_timeline.rs"

[[example]]
name = "create_post"
path = "../../examples/create_post.rs"

[[example]]
name = "post_with_image"
path = "../../examples/post_with_image.rs"

[[example]]
name = "update_profile"
path = "../../examples/update_profile.rs"

[[example]]
name = "public_atproto_feed"
path = "../../examples/public_atproto_feed.rs"

[[example]]
name = "create_whitewind_post"
path = "../../examples/create_whitewind_post.rs"

[[example]]
name = "read_whitewind_post"
path = "../../examples/read_whitewind_post.rs"

[[example]]
name = "read_tangled_repo"
path = "../../examples/read_tangled_repo.rs"

[[example]]
name = "resolve_did"
path = "../../examples/resolve_did.rs"

[[example]]
name = "update_preferences"
path = "../../examples/update_preferences.rs"
required-features = ["api_bluesky"]

[dependencies]
jacquard-api = { version = "0.5", path = "../jacquard-api" }
jacquard-common = { version = "0.5", path = "../jacquard-common", features = ["reqwest-client"] }
jacquard-oauth = { version = "0.5", path = "../jacquard-oauth" }
jacquard-derive = { version = "0.5", path = "../jacquard-derive", optional = true }
jacquard-identity = { version = "0.5", path = "../jacquard-identity" }

bon.workspace = true
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
miette = { workspace = true }
reqwest = { workspace = true, features = ["charset", "http2", "json", "system-proxy", "gzip", "rustls-tls"] }
serde.workspace = true
serde_html_form.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
url.workspace = true
smol_str.workspace = true
percent-encoding.workspace = true
jose-jwk = { workspace = true, features = ["p256"] }
p256 = { workspace = true, features = ["ecdsa"] }
rand_core.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
clap.workspace = true
miette = { workspace = true, features = ["fancy"] }

[package.metadata.docs.rs]
features = [ "api_all", "derive", "dns", "loopback" ]
